# Smart-Tools

./: .gitignore  ArduinoDAQ.py  Plot_ST_Data.py  README.md  ST_ArduinoNanoCode.ino  Tensorflow_Lite_DNN.ipynb  data_README.md  pyproject.toml  requirements.txt
Arduino Deployment/Sine Function Example/: sine_function.ino
Data Collection/: ST_Data_Collection_Driver.py
Data Pre-processing/: Data_Pre_Processing.py
Model Design and Training/: Tensorflow_Lite_DNN.ipynb
arduino/custom_trial/: arduino_main.cpp  deploy.ino  main_functions.h  model.cpp  model.h
arduino/hello_world_reference/: arduino_output_handler.cpp  hello_world.ino  model.cpp  output_handler.h
arduino_tinyml/: train_normalization_quantiles.csv
arduino_tinyml/hello_world_tinyml/: hell_world_tinyml.ino  model.cpp
data/: test.csv  test_data_x_np.npy
models/: model-pi10mins-contiguous.tflite  model-pi10mins.tflite  model_11sensors_f32.tflite
notebooks/: Colab_Tensorflow_Lite_DNN.ipynb  ST-sktime.ipynb  clean_data.ipynb  feat_imp.ipynb  metrics.ipynb  pandas_testbed.ipynb  plot-rt-data.ipynb  plots.ipynb  split_data.ipynb  split_robot_data.ipynb  ts-classification.ipynb  working_quantization_tinyml.ipynb
pi-scripts/: OLED.py  OLED_test.py  OLEDscreentest.py  Prototype1.py  adconverter.py  collect_data.py  currenttest.py  data_vs_accuracy.py  display_OLED.py  get_IMU_current.py  get_data.py  hardwaretestimu.py  inference.py  inference_stats.py  mictest.py  model.pb  new_processed_data.py  process_data.py  process_statistics.py  processed_df.csv  scrap_human_data.py  scrap_raw_data.py  scrape_human_data.py  scrape_subject_data.py  scrape_yaskawa_data.py  test_OLED.py  test_OLED_text.py  test_current_mic.py  test_df_inference.py  test_imu.py  test_imu_new.py  tool_force.py  tool_on_off.py  tool_passes.py
plots/: plot_id_ood_barplot.py  plot_sensor_comparisons.py  plot_test_accuracy_vs_data_volume.py
scripts/: ArduinoDAQ.py  Current_Analysis_Example.py  Data_Pre_Processing.py  SMA_test.ino  ST_Data_Collection_Driver.py  data_vs_accuracy.py  process_data.py
(+40 files in other folders)
