[tool.poetry]
name = "smart-tools"
version = "0.1.0"
description = "Code repository of our paper titled \"Using human and robot synthetic data for training smart hand tools\", in press at ICRA 2024."
authors = ["Sundar Sripada V. S."]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
absl-py = "2.0.0"
asttokens = "2.4.1"
astunparse = "1.6.3"
backcall = "0.2.0"
cachetools = "5.3.2"
certifi = "2023.7.22"
charset-normalizer = "3.3.2"
comm = "0.2.0"
debugpy = "1.8.0"
decorator = "5.1.1"
docopt = "0.6.2"
executing = "2.0.1"
flatbuffers = "23.5.26"
gast = "0.4.0"
google-auth = "2.23.4"
google-auth-oauthlib = "1.0.0"
google-pasta = "0.2.0"
grpcio = "1.59.3"
h5py = "3.10.0"
idna = "3.4"
importlib-metadata = "6.8.0"
ipykernel = "6.26.0"
ipython = "8.12.3"
jedi = "0.19.1"
jupyter-client = "8.6.0"
jupyter-core = "5.5.0"
keras = "2.13.1"
libclang = "16.0.6"
markdown = "3.5.1"
markupsafe = "2.1.3"
matplotlib-inline = "0.1.6"
nest-asyncio = "1.5.8"
numpy = "1.24.3"
oauthlib = "3.2.2"
opt-einsum = "3.3.0"
packaging = "23.2"
pandas = "2.0.3"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pipreqs = "0.4.13"
platformdirs = "4.0.0"
prompt-toolkit = "3.0.41"
protobuf = "4.25.1"
psutil = "5.9.6"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pygments = "2.16.1"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
pyzmq = "25.1.1"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
rsa = "4.9"
six = "1.16.0"
stack-data = "0.6.3"
tensorboard = "2.13.0"
tensorboard-data-server = "0.7.2"
tensorflow = "2.13.1"
tensorflow-estimator = "2.13.0"
tensorflow-io-gcs-filesystem = "0.34.0"
termcolor = "2.3.0"
tornado = "6.3.3"
traitlets = "5.13.0"
typing-extensions = "4.5.0"
tzdata = "2023.3"
urllib3 = "2.1.0"
wcwidth = "0.2.10"
werkzeug = "3.0.1"
wrapt = "1.16.0"
yarg = "0.1.9"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
